--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -13,7 +13,8 @@ resources:
       type: github
       endpoint: github.com_alexbaptista
       name: alexbaptista/azuredevops-iac-template-pipeline
-      ref: refs/tags/v.1.3
+      # ref: refs/tags/v.1.3
+      ref: refs/heads/main
   containers:
     - container: terraform
       image: docker.io/alxbap/azuredevops-iac-template-pipeline:v.1.3
@@ -54,7 +55,7 @@ pr:
 stages:
   - template: pipeline/terraform.yaml@Iac-template
     parameters:
-      terraformPath: /aks
+      terraformPath: $(System.DefaultWorkingDirectory)/aks
       terraformVersion: 1.2.9
       resourceContainer: terraform
       envConfig:
