--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -13,11 +13,10 @@ resources:
       type: github
       endpoint: github.com_alexbaptista
       name: alexbaptista/azuredevops-iac-template-pipeline
-      # ref: refs/tags/v.1.3
-      ref: refs/heads/main
+      ref: refs/tags/v.1.4
   containers:
     - container: terraform
-      image: docker.io/alxbap/azuredevops-iac-template-pipeline:v.1.3
+      image: docker.io/alxbap/azuredevops-iac-template-pipeline:v.1.4
       env:
         TF_STATE_BLOB_ACCOUNT_NAME: $(terraformStateBlobAccountName)
         TF_STATE_BLOB_CONTAINER_NAME: $(terraformStateBlobContainerName)
