Use only dev environment

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -32,9 +32,9 @@ resources:
 trigger:
   branches:
     include:
-      - refs/heads/dev
-      - refs/heads/qa
-      - refs/heads/uat
+      # - refs/heads/dev
+      # - refs/heads/qa
+      # - refs/heads/uat
       - refs/heads/main
   paths:
     exclude:
@@ -43,9 +43,9 @@ trigger:
 pr:
   branches:
     include:
-      - refs/heads/dev
-      - refs/heads/qa
-      - refs/heads/uat
+      # - refs/heads/dev
+      # - refs/heads/qa
+      # - refs/heads/uat
       - refs/heads/main
   paths:
     exclude:
@@ -60,15 +60,15 @@ stages:
       envConfig:
         DEV:
           environmentDeploy: dev
-          gitBranch: refs/heads/dev
-        QA:
-          environmentDeploy: qa
-          gitBranch: refs/heads/qa
-        UAT:
-          environmentDeploy: uat
-          gitBranch: refs/heads/uat
-        PRD:
-          environmentDeploy: prd
           gitBranch: refs/heads/main
+        # QA:
+        #   environmentDeploy: qa
+        #   gitBranch: refs/heads/qa
+        # UAT:
+        #   environmentDeploy: uat
+        #   gitBranch: refs/heads/uat
+        # PRD:
+        #   environmentDeploy: prd
+        #   gitBranch: refs/heads/main
         PR:
           githubToken: $(githubToken)
