--- a/argocd/azure-pipelines.yaml
+++ b/argocd/azure-pipelines.yaml
@@ -48,7 +48,7 @@ pr:
 stages:
   - template: pipeline/terraform.yaml@Iac-template
     parameters:
-      terraformPath: $(System.DefaultWorkingDirectory)/terraform
+      terraformPath: $(System.DefaultWorkingDirectory)/argocd/terraform
       terraformVersion: 1.3.0
       resourceContainer: terraform
       envConfig:
